fixed comment text gaps

--- a/src/components/node/CommentContent/styles.scss
+++ b/src/components/node/CommentContent/styles.scss
@@ -102,7 +102,7 @@
 }
 
 .block_text {
-  padding: $gap 0;
+  padding: $gap / 2 0;
 }
 
 .date {
